# polybot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
scripts/: backtest.py  backtest_snapshot.py
src/polybot/: __init__.py  bot.py  cli.py  config.py  journal.py  state.py
src/polybot/dashboard/: __init__.py  dashboard.py
src/polybot/decide/: __init__.py  consensus.py
src/polybot/execute/: __init__.py  executor.py  exit_rules.py
src/polybot/ingest/: __init__.py  download.py  resolutions.py  schema.py
src/polybot/monitor/: __init__.py  monitor.py
src/polybot/polymarket/: client.py  clob.py
src/polybot/rank/: __init__.py  leaderboard.py  rank_wallets.py
src/polybot/signal/: __init__.py
tests/: test_executor.py  test_exit_rules.py  test_review_fixes.py
