[project]
name = "polybot"
version = "0.0.1"
description = "Claude-powered copy-trading bot for Polymarket"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
