[project]
name = "polybot"
version = "0.0.1"
description = "Claude-powered copy-trading bot for Polymarket"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "httpx",
    "python-dotenv",
    "duckdb",
    "rich",
    "py-clob-client-v2",  # CLOB V2 (migration 2026-04-28; legacy py-clob-client is dead)
]

[project.scripts]
polybot = "polybot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
